organize and archive

--- a/unsorted/rough_nb.ipynb
+++ b/unsorted/rough_nb.ipynb
@@ -12,8 +12,7 @@
     "from IPython.display import Math, Latex # for latex equations\n",
     "from IPython.core.display import Image # for displaying images\n",
     "from scipy import stats\n",
-    "from scipy import optimize\n",
-    "import seaborn"
+    "from scipy import optimize"
    ]
   },
   {
