manually fit GA20Ox-1 data

--- a/hfsp_notebooks/hfsp_nb_node_fitting_FT1.ipynb
+++ b/hfsp_notebooks/hfsp_nb_node_fitting_FT1.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define variables"
+    "# Define variables for FT1"
    ]
   },
   {
@@ -145,36 +145,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "def SD_time_at10(df):\n",
-    "    time_at10 = []\n",
-    "    for i in range(len(df.iloc[0,:])-5):\n",
-    "        for j in range(len(df)):\n",
-    "            if df.iloc[:,i+1][j] > 10:\n",
-    "                time_at10.append(df['time'][j])\n",
-    "                break\n",
-    "    return np.std(np.array(time_at10))\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
